--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,7 @@
-﻿comtypes==1.4.1
-install==1.3.5
-pypiwin32==223
-pyttsx3==2.90
-pywin32==306
+altgraph==0.17.4
+packaging==24.0
+pefile==2023.2.7
+pyinstaller==6.6.0
+pyinstaller-hooks-contrib==2024.5
+pywin32-ctypes==0.2.2
 setuptools==65.5.0
